--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
+
+          unityInstance.SendMessage('GameManager', 'setTimeScale')
+
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
           };
@@ -114,6 +117,7 @@
         });
       };
       document.body.appendChild(script);
+      
     </script>
   </body>
 </html>
