--- a/proIndex.html
+++ b/proIndex.html
@@ -11,23 +11,17 @@
     <div class="slidecontainer">
       <p>Velocidad simulacion: <input type="range" min="1" max="100" value="1" class="slider" id="myRange"> <button onclick="u.SendMessage('GameManager', 'globalView')">Vista global</button>      <button onclick="u.SendMessage('GameManager', 'setCamToTarget', 0)">Ver sat 0</button>
         <button onclick="u.SendMessage('GameManager', 'setCamToTarget', 1)">Ver sat 1</button> </p>
-      
-
-
-
-    </div>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+        <canvas id="unity-canvas" width=960 height=600></canvas>
+        <div id="unity-loading-bar">
+          <div id="unity-logo"></div>
+          <div id="unity-progress-bar-empty">
+            <div id="unity-progress-bar-full"></div>
+          </div>
         </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-fullscreen-button"></div>
-      </div>
+        <div id="unity-warning"> </div>
+        <div id="unity-footer">
+          <div id="unity-fullscreen-button"></div>
+        </div>
     </div>
     <script>
       var container = document.querySelector("#unity-container");
@@ -99,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1960px";
-        canvas.style.height = "900px";
+        canvas.style.width = "80%";
+        canvas.style.height = "20%";
       }
 
       loadingBar.style.display = "block";
