--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Sat Orbits</title>
+    <title>Unity WebGL Player | SatVisu</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
-    <div class="slidecontainer">
-      <p>Velocidad simulacion: <input type="range" min="1" max="100" value="1" class="slider" id="myRange"> <button onclick="u.SendMessage('GameManager', 'globalView')">Vista global</button>      <button onclick="u.SendMessage('GameManager', 'setCamToTarget', 0)">Ver sat 0</button>
-        <button onclick="u.SendMessage('GameManager', 'setCamToTarget', 1)">Ver sat 1</button> </p>
-        <canvas id="unity-canvas" width=960 height=600></canvas>
-        <div id="unity-loading-bar">
-          <div id="unity-logo"></div>
-          <div id="unity-progress-bar-empty">
-            <div id="unity-progress-bar-full"></div>
-          </div>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
         </div>
-        <div id="unity-warning"> </div>
-        <div id="unity-footer">
-          <div id="unity-fullscreen-button"></div>
-        </div>
+      </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">SatVisu</div>
+      </div>
     </div>
     <script>
       var container = document.querySelector("#unity-container");
@@ -63,8 +63,8 @@
         codeUrl: buildUrl + "/TestWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Orbits",
-        productVersion: "1.0",
+        productName: "SatVisu",
+        productVersion: "0.1",
         showBanner: unityShowBanner,
       };
 
@@ -93,13 +93,12 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "80%";
-        canvas.style.height = "20%";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       loadingBar.style.display = "block";
 
-      var u = null
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
@@ -107,15 +106,6 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-
-          var a = unityInstance.SendMessage('GameManager', 'setTimeScale', 1)
-          var slider = document.getElementById("myRange");
-          u = unityInstance
-          slider.oninput = function() {
-            console.log(slider.value)
-            unityInstance.SendMessage('GameManager', 'setTimeScale', parseInt(slider.value))
-          }
-
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
           };
@@ -124,10 +114,6 @@
         });
       };
       document.body.appendChild(script);
-      
     </script>
-
-
-
   </body>
 </html>
