--- a/index.html
+++ b/index.html
@@ -1,141 +1,131 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Sat Orbits</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div class="slidecontainer">
-      <p>Velocidad simulacion: <input type="range" min="1" max="100" value="1" class="slider" id="myRange"> 
-        <button onclick="u.SendMessage('GameManager', 'globalView')">Vista global</button>      
-        <button onclick="u.SendMessage('GameManager', 'setCamToTarget', index--)">Ver sat -</button>
-        <button onclick="u.SendMessage('GameManager', 'setCamToTarget', index++)">Ver sat +</button> </p>
-        <canvas id="unity-canvas" width=960 height=600></canvas>
-        <div id="unity-loading-bar">
-          <div id="unity-logo"></div>
-          <div id="unity-progress-bar-empty">
-            <div id="unity-progress-bar-full"></div>
-          </div>
-        </div>
-        <div id="unity-warning"> </div>
-        <div id="unity-footer">
-          <div id="unity-fullscreen-button"></div>
-        </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Sat Orbits</title>
+  <link rel="shortcut icon" href="TemplateData/favicon.ico">
+  <link rel="stylesheet" href="TemplateData/style.css">
+</head>
+
+<body>
+  <div class="slidecontainer">
+    <p>Velocidad simulacion: <input type="range" min="1" max="100" value="1" class="slider" id="myRange">
+      <button onclick="u.SendMessage('GameManager', 'globalView')">Vista global</button>
+      <button onclick="u.SendMessage('GameManager', 'setCamToTarget', index--)">Ver sat -</button>
+      <button onclick="u.SendMessage('GameManager', 'setCamToTarget', index++)">Ver sat +</button>
+    </p>
+    <canvas id="unity-canvas" width=960 height=600></canvas>
+    <div id="unity-loading-bar">
+      <div id="unity-logo"></div>
+      <div id="unity-progress-bar-empty">
+        <div id="unity-progress-bar-full"></div>
+      </div>
     </div>
-    <script>
-      var index = 0;
+    <div id="unity-warning"> </div>
+    <div id="unity-footer">
+      <div id="unity-fullscreen-button"></div>
+    </div>
+  </div>
+  <script>
+    var index = 0;
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var loadingBar = document.querySelector("#unity-loading-bar");
+    var progressBarFull = document.querySelector("#unity-progress-bar-full");
+    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    var warningBanner = document.querySelector("#unity-warning");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
+    function unityShowBanner(msg, type) {
+      function updateBannerVisibility() {
+        warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
       }
-
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TestWebGL.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/TestWebGL.data",
-        frameworkUrl: buildUrl + "/TestWebGL.framework.js",
-        codeUrl: buildUrl + "/TestWebGL.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Orbits",
-        productVersion: "1.0",
-        showBanner: unityShowBanner,
-      };
-
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "80%";
-        canvas.style.height = "20%";
+      var div = document.createElement('div');
+      div.innerHTML = msg;
+      warningBanner.appendChild(div);
+      if (type == 'error') div.style = 'background: red; padding: 10px;';
+      else {
+        if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+        setTimeout(function () {
+          warningBanner.removeChild(div);
+          updateBannerVisibility();
+        }, 5000);
       }
+      updateBannerVisibility();
+    }
 
-      loadingBar.style.display = "block";
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/TestWebGL.loader.js";
 
-      var u = null
-      var testObj = { tle1: "1 43556U 18046C   22347.51471233  .00039219  00000+0  72910-3 0  9991", tle2: "2 43556  51.6347  25.9769 0007846 338.0665  21.9986 15.48472536246962"}
-      var jsonStr = JSON.stringify(testObj)
+    var config = {
+      dataUrl: buildUrl + "/TestWebGL.data",
+      frameworkUrl: buildUrl + "/TestWebGL.framework.js",
+      codeUrl: buildUrl + "/TestWebGL.wasm",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "Orbits",
+      productVersion: "1.0",
+      showBanner: unityShowBanner,
+    };
+
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      // Mobile device style: fill the whole browser client area with the game canvas:
+
+      var meta = document.createElement('meta');
+      meta.name = 'viewport';
+      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+      document.getElementsByTagName('head')[0].appendChild(meta);
+      container.className = "unity-mobile";
+      canvas.className = "unity-mobile";
+
+      unityShowBanner('WebGL builds are not supported on mobile devices.');
+    } else {
+      canvas.style.width = "80%";
+      canvas.style.height = "20%";
+    }
+
+    loadingBar.style.display = "block";
+
+    var u = null
+    var testObj = { tle1: "1 43556U 18046C   22347.51471233  .00039219  00000+0  72910-3 0  9991", tle2: "2 43556  51.6347  25.9769 0007846 338.0665  21.9986 15.48472536246962" }
+    var jsonStr = JSON.stringify(testObj)
+
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = 100 * progress + "%";
+      }).then((unityInstance) => {
+        loadingBar.style.display = "none";
+
+        var a = unityInstance.SendMessage('GameManager', 'setTimeScale', 1)
+        var slider = document.getElementById("myRange");
+        u = unityInstance
+        slider.oninput = function () {
+          console.log(slider.value)
+          unityInstance.SendMessage('GameManager', 'setTimeScale', parseInt(slider.value))
+        }
+
+        fullscreenButton.onclick = () => {
+          unityInstance.SetFullscreen(1);
+        };
+      }).catch((message) => {
+        alert(message);
+      });
+    };
+    document.body.appendChild(script);
 
 
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
+    const yourFunction = async () => {
+      await delay(5000);
+      console.log("Waited 5s");
+      u.SendMessage('GameManager', 'addSat', jsonStr)
 
-          var a = unityInstance.SendMessage('GameManager', 'setTimeScale', 1)
-          var slider = document.getElementById("myRange");
-          u = unityInstance
-          slider.oninput = function() {
-            console.log(slider.value)
-            unityInstance.SendMessage('GameManager', 'setTimeScale', parseInt(slider.value))
-          }
-
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
-      
-    </script>
-
-
-
-  </body>
+      await delay(5000);
+      console.log("Waited an additional 5s");
+    };
+  </script>
+</body>
 </html>
